Replaced some instances of Arrays.asList with List.of